# tmbl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  TODO  cmake-format.py  main.cpp
bootrom/: bootrom.h  (+1 more)
include/tmbl/: CMakeLists.txt  Gameboy.cpp  Gameboy.hpp  config.h  memory_map.h
include/tmbl/builtin/: builtin.h
include/tmbl/bus/: CMakeLists.txt  bus.cpp  bus.h
include/tmbl/cartridge/: CMakeLists.txt  cartridge.cpp  cartridge.h
include/tmbl/cartridge/bootrom/: bootrom.h
include/tmbl/cartridge/carttypes/mbc1/: mbc1.h
include/tmbl/cartridge/carttypes/rom/: rom.h
include/tmbl/cartridge/mbc/: CMakeLists.txt  mbc.h
include/tmbl/cartridge/mbc/mbc0/: CMakeLists.txt  mbc0.cpp  mbc0.h
include/tmbl/cartridge/mbc/mbc1/: CMakeLists.txt  mbc1.cpp  mbc1.h
include/tmbl/cartridge/mbc1/: mbc1.h
include/tmbl/cartridge/metadata/: codes.h  pakInfo.h
include/tmbl/cartridge/rom/: rom.h
include/tmbl/cartridge/type/: mbc1.h  mbc2.h  mbc5.h  rom.h
include/tmbl/clock/: clock.h
include/tmbl/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  reg.h
include/tmbl/cpu/clock/: CMakeLists.txt  clock.cpp  clock.h
include/tmbl/cpu/internals/: e8.h  flags.h  n16.h  n8.h  r16.h  r8.h
include/tmbl/cpu/registers/: CMakeLists.txt  reg.h  reg16.cpp  reg16.h  reg8.cpp  reg8.h
include/tmbl/dma/: dma.h
include/tmbl/io/: registers.h
include/tmbl/io/interrupts/: interrupts.h
include/tmbl/io/joypad/: joypad.h
include/tmbl/io/timer/: timer.h
include/tmbl/memory/: CMakeLists.txt  memory.cpp  memory.h
include/tmbl/ppu/: CMakeLists.txt  ppu.cpp  ppu.h
include/tmbl/ppu/data/: obj.h
include/tmbl/ppu/internals/: bcpd.h  bcps.h  bgp.h  lcdc.h  obp.h  ocpd.h  ocps.h  stat.h
include/tmbl/ppu/registers/: bgp.h  lcdc.h  stat.h
include/tmbl/utils/: utils.h
src/: CMakeLists.txt
src/builtin/: CMakeLists.txt  builtin.cpp
src/bus/: CMakeLists.txt  bus.cpp
src/cartridge/: CMakeLists.txt  cartridge.cpp
src/cartridge/carttypes/: CMakeLists.txt
src/cartridge/carttypes/mbc1/: CMakeLists.txt  mbc1.cpp
src/cartridge/carttypes/rom/: CMakeLists.txt  rom.cpp
src/cartridge/mbc1/: CMakeLists.txt  mbc1.cpp
src/cartridge/metadata/: CMakeLists.txt  pakInfo.cpp
src/cartridge/rom/: CMakeLists.txt  rom.cpp
src/cartridge/type/: CMakeLists.txt  mbc1.cpp  mbc2.cpp  mbc5.cpp  rom.cpp
src/clock/: CMakeLists.txt  clock.cpp
src/cpu/: CMakeLists.txt  cpu.cpp
src/cpu/internals/: CMakeLists.txt  e8.cpp  flags.cpp  n16.cpp  n8.cpp  r16.cpp  r8.cpp
src/dma/: CMakeLists.txt  dma.cpp
src/io/: CMakeLists.txt  registers.cpp
src/io/interrupts/: CMakeLists.txt  interrupts.cpp
src/io/joypad/: CMakeLists.txt  joypad.cpp
src/io/timer/: CMakeLists.txt  timer.cpp
src/ppu/: CMakeLists.txt  ppu.cpp
src/ppu/data/: CMakeLists.txt  obj.cpp
src/ppu/internals/: CMakeLists.txt  bcpd.cpp  bcps.cpp  bgp.cpp  lcdc.cpp  obp.cpp  ocpd.cpp  ocps.cpp  stat.cpp
src/ppu/registers/: CMakeLists.txt  bgp.cpp  lcdc.cpp  stat.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/: CMakeLists.txt  gameboy.cpp  gameboy.h  main.cpp  reg8_test.cpp
tests/rom/: .clang-format  CMakeLists.txt  main.cpp
tests/rom/test_roms/blargg/: halt_bug.gb.sha256
tests/rom/test_roms/blargg/cgb_sound/: cgb_sound.gb.sha256
tests/rom/test_roms/blargg/cpu_instrs/: cpu_instrs.gb.sha256
tests/rom/test_roms/blargg/dmg_sound/: dmg_sound.gb.sha256
tests/rom/test_roms/blargg/instr_timing/: instr_timing.gb.sha256
tests/rom/test_roms/blargg/interrupt_time/: interrupt_time.gb.sha256
tests/rom/test_roms/blargg/mem_timing/: mem_timing.gb.sha256
tests/rom/test_roms/blargg/mem_timing-2/: mem_timing.gb.sha256
tests/rom/test_roms/blargg/oam_bug/: oam_bug.gb.sha256
tests/rom/test_roms/cgb-acid2/: cgb-acid2.gbc.sha256
tests/rom/test_roms/dmg-acid2/: dmg-acid2.gb.sha256
tests/rom/test_roms/gambatte/: cgb_bgp_dumper.gbc.sha256  cgb_objp_dumper.gbc.sha256  fexx_ffxx_dumper.gbc.sha256  fexx_read_reset_set_dumper.gbc.sha256  ioregs_reset_dumper.gbc.sha256  jpadirq_1.gbc.sha256  jpadirq_2.gbc.sha256  sram.gbc.sha256  vram_dumper.gbc.sha256  wram_dumper.gbc.sha256
tests/rom/test_roms/gambatte/bgen/: bgoff_bgon_sprite_above_window.gbc.sha256  bgoff_bgon_sprite_below_window.gbc.sha256
tests/rom/test_roms/gambatte/bgtiledata/: bgtiledata_spx08_1.gbc.sha256  bgtiledata_spx08_2.gbc.sha256  bgtiledata_spx08_3.gbc.sha256  bgtiledata_spx08_4.gbc.sha256  bgtiledata_spx08_ds_1.gbc.sha256  bgtiledata_spx08_ds_2.gbc.sha256  bgtiledata_spx08_ds_3.gbc.sha256  bgtiledata_spx08_ds_4.gbc.sha256  bgtiledata_spx09_1.gbc.sha256  bgtiledata_spx09_2.gbc.sha256  bgtiledata_spx09_3.gbc.sha256  (+13 more)
tests/rom/test_roms/mealybug-tearoom-tests/: m2_win_en_toggle.gb.sha256  m3_bgp_change.gb.sha256  m3_bgp_change_sprites.gb.sha256  m3_lcdc_bg_en_change.gb.sha256  m3_lcdc_bg_en_change2.gb.sha256  m3_lcdc_bg_map_change.gb.sha256  m3_lcdc_bg_map_change2.gb.sha256  m3_lcdc_obj_en_change.gb.sha256  m3_lcdc_obj_en_change_variant.gb.sha256  m3_lcdc_obj_size_change.gb.sha256  m3_lcdc_obj_size_change_scx.gb.sha256  m3_lcdc_tile_sel_change.gb.sha256  m3_lcdc_tile_sel_change2.gb.sha256  m3_lcdc_tile_sel_win_change.gb.sha256  m3_lcdc_tile_sel_win_change2.gb.sha256  m3_lcdc_win_en_change_multiple.gb.sha256  m3_lcdc_win_en_change_multiple_wx.gb.sha256  m3_lcdc_win_map_change.gb.sha256  m3_lcdc_win_map_change2.gb.sha256  m3_obp0_change.gb.sha256  m3_scx_high_5_bits.gb.sha256  m3_scx_high_5_bits_change2.gb.sha256  m3_scx_low_3_bits.gb.sha256  m3_scy_change.gb.sha256  m3_scy_change2.gb.sha256  m3_window_timing.gb.sha256  m3_window_timing_wx_0.gb.sha256  m3_wx_4_change.gb.sha256  m3_wx_4_change_sprites.gb.sha256  m3_wx_5_change.gb.sha256  m3_wx_6_change.gb.sha256
tests/unit/: CMakeLists.txt  cpu_test.cpp  e8_test.cpp  flags_test.cpp  intr_test.cpp  mbc1_test.cpp  mbc2_test.cpp  mbc5_test.cpp  n16_test.cpp  n8_test.cpp  r16_test.cpp  r8_test.cpp  reg16_test.cpp  reg8_test.cpp  rom_test.cpp
tests/unit/instructions/: CMakeLists.txt  LD_test.cpp
tests/unit/registers/: CMakeLists.txt  reg16_test.cpp  reg8_test.cpp
(+3665 files in other folders)
